# lisbet

./: .gitignore  CNAME  LICENSE  README.md  ROADMAP.md  _config.yml  environment.yml  pyproject.toml
.github/workflows/: pypi-publish.yml
docs/: api.rst  conf.py  index.rst  requirements.txt
docs/getting_started/: index.rst  installation.rst  quickstart.rst
docs/user_guide/: behavior_classification.rst  behavior_discovery.rst  data_augmentation.rst  data_preparation.rst  dimensionality_reduction.rst  fine_tuning.rst  index.rst  prototype_calibration.rst  prototype_inference.rst  self_supervised_tasks.rst  train_model.rst
examples/: README.rst  plot_prototype_selection.py
src/lisbet/: analysis.py  cli.py  data_pipeline.py  datasets.py  drawing.py  evaluation.py  hub.py  inference.py  input_pipeline.py  modeling.py  plotting.py  postprocessing.py  training.py  transforms_extra.py  unsupervised.py  utils.py  video.py
src/lisbet/cli/: __init__.py  annotate_behavior.py  common.py  compute_embeddings.py  evaluate_model.py  export_embedder.py  fetch_dataset.py  fetch_model.py  main.py  model_info.py  reduce_dimensions.py  segment_motifs.py  select_prototypes.py  train_model.py
src/lisbet/cli/commands/: __init__.py  eval.py  fetch.py  info.py  postproc.py  predict.py  train.py
src/lisbet/config/: __init__.py  models.py  overrides.py  presets.py  schemas.py
src/lisbet/datasets/: __init__.py  calms21.py  common.py  core.py  dirtree.py  h5archive.py  iterable_style.py  mabe22.py  map_style.py
src/lisbet/inference/: __init__.py  annotation.py  common.py  embedding.py
src/lisbet/io/: __init__.py  annotation_formats.py  core.py
src/lisbet/io/ext_sources/: calms21.py  mabe22.py
src/lisbet/modeling/: __init__.py  factory.py  info.py  losses.py  metrics.py  models.py  modules_extra.py
src/lisbet/modeling/backbones/: __init__.py  base.py  lstm.py  tcn.py  transformer.py
src/lisbet/modeling/heads/: __init__.py  classification.py  embedding.py  projection.py
src/lisbet/training/: __init__.py  augmentation.py  core.py  io.py  preprocessing.py  tasks.py  utils.py
tests/: test_analysis.py  test_augmentation_integration.py  test_data_augmentation_config.py  test_datasets.py  test_datasets_core.py  test_evaluation.py  test_find_tracking_files.py  test_geometric_invariance.py  test_inference.py  test_input_pipeline.py  test_io_core.py  test_training_helpers.py  test_training_integration.py  test_transforms_extra.py
